force-app/main/default/objects/CSARequests__c/CSARequests__c.object-meta.xml
<CustomObject>
    <description>Client Services Administrations Page</description>
    <label>CSA Requests</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSA Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>