force-app/main/default/objects/CSARequests__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account task is associated with.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SPA</relationshipName>
    <type>Lookup</type>
</CustomField>