force-app/main/default/objects/CSARequests__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>