force-app/main/default/objects/CSARequests__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campiagn that the task is associated with.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>SPA</relationshipName>
    <type>Lookup</type>
</CustomField>