force-app/main/default/objects/CSARequests__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case that the request is associated with.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>SPA</relationshipName>
    <type>Lookup</type>
</CustomField>