force-app/main/default/objects/CSARequests__c/fields/Conference_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Conference_End_Date__c</fullName>
    <label>Conference End Date</label>
    <type>Date</type>
</CustomField>