force-app/main/default/objects/CSARequests__c/fields/CSA_Request__c.field-meta.xml
<CustomField>
    <fullName>CSA_Request__c</fullName>
    <description>List of the possible requests that could be made of CSA</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add/Edit Salesforce contacts</fullName>
            </value>
            <value>
                <fullName>Advisory Board Support</fullName>
            </value>
            <value>
                <fullName>Ambassador Program Request</fullName>
            </value>
            <value>
                <fullName>Business Cards</fullName>
            </value>
            <value>
                <fullName>Campaign Assistance</fullName>
            </value>
            <value>
                <fullName>Campus Activation Event</fullName>
            </value>
            <value>
                <fullName>Check Request</fullName>
            </value>
            <value>
                <fullName>Client Forum Support</fullName>
            </value>
            <value>
                <fullName>Collateral or Presentations</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Conference Presentation Assistance</fullName>
            </value>
            <value>
                <fullName>Conference Presentation Proposal</fullName>
            </value>
            <value>
                <fullName>Conference Registration</fullName>
            </value>
            <value>
                <fullName>Create Brand Name</fullName>
            </value>
            <value>
                <fullName>Data Depersonalization Request</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Marketing Request</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Research</fullName>
            </value>
            <value>
                <fullName>New/Renew Association Membership</fullName>
            </value>
            <value>
                <fullName>New Collateral</fullName>
            </value>
            <value>
                <fullName>Off-board Client</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pre-Conference Email</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Meeting / In-Person Support</fullName>
            </value>
            <value>
                <fullName>Presentation Content Assistance</fullName>
            </value>
            <value>
                <fullName>President Pre-Renewal Letter</fullName>
            </value>
            <value>
                <fullName>Print/Copy Materials</fullName>
            </value>
            <value>
                <fullName>Purchasing Assistance</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Return School Copy of Contract</fullName>
            </value>
            <value>
                <fullName>Salesforce Admininstrator Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>