force-app/main/default/objects/CSARequests__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Please put in the details here</description>
    <inlineHelpText>Please put in the details here</inlineHelpText>
    <label>Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>