force-app/main/default/objects/CSARequests__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date the task needs to be completed</description>
    <label>Due/Proposal Deadline</label>
    <type>Date</type>
</CustomField>