force-app/main/default/objects/CSARequests__c/fields/Engagement_Partner_Request__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Partner_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox if the request being submitted is specifically for ENGAGEMENT PARTNERS only - not for the SCHOOL CHANNEL.</description>
    <inlineHelpText>Select this checkbox if the request being submitted is specifically for ENGAGEMENT PARTNERS only - otherwise, leave this field blank.</inlineHelpText>
    <label>Engagement Partner Request</label>
    <type>Checkbox</type>
</CustomField>