force-app/main/default/objects/CSARequests__c/fields/Expected_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendees__c</fullName>
    <label>Expected Attendees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>