force-app/main/default/objects/CSARequests__c/fields/Link_to_Proposal_Site__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Proposal_Site__c</fullName>
    <label>Link to Proposal Site</label>
    <type>Url</type>
</CustomField>