force-app/main/default/objects/CSARequests__c/fields/Proposed_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Presenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Presenter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CSA Requests</relationshipLabel>
    <relationshipName>CSA_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>