force-app/main/default/objects/CSARequests__c/fields/Suggested_Topic__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Topic__c</fullName>
    <label>Suggested Topic</label>
    <type>TextArea</type>
</CustomField>