force-app/main/default/objects/CSARequests__c/recordTypes/CSA_Request.recordType-meta.xml
<RecordType>
    <fullName>CSA_Request</fullName>
    <active>true</active>
    <description>Use this record type for any request other than Conference Presentation Assistance</description>
    <label>CSA Request</label>
</RecordType>