force-app/main/default/objects/CSARequests__c/recordTypes/Pro_Services_Request.recordType-meta.xml
<RecordType>
    <fullName>Pro_Services_Request</fullName>
    <active>true</active>
    <description>Use this record type ONLY for Conference Presentation Assistance</description>
    <label>Pro Services Request</label>
</RecordType>