force-app/main/default/objects/CSARequests__c/validationRules/Conf_Presentation_Prop_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Conf_Presentation_Prop_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Pro_Services_Request&#39; &amp;&amp; ISPICKVAL(CSA_Request__c,&#39;Conference Presentation Proposal&#39;) &amp;&amp; (ISNULL(Due_Date__c)|| ISNULL(Conference_End_Date__c)||ISNULL(Conference_Start_Date__c)|| ISNULL(Expected_Attendees__c))</errorConditionFormula>
    <errorMessage>Due/Proposal Deadline,Start Date,EndDate,Expected Attendees are required fields for this Request Type .</errorMessage>
</ValidationRule>