force-app/main/default/objects/CSARequests__c/validationRules/Pre_Sales_Meeting_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Sales_Meeting_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Pro_Services_Request&#39; &amp;&amp;  (ISPICKVAL(CSA_Request__c,&#39;Pre-Sales Meeting / In-Person Support&#39;) || ISPICKVAL(CSA_Request__c,&#39;Salt Demo / Webinar&#39;)) &amp;&amp; (ISBLANK(Details__c)|| ISNULL(Meeting_Date__c))</errorConditionFormula>
    <errorMessage>Details and Meeting Date are required fields for this Request Type.</errorMessage>
</ValidationRule>