force-app/main/default/objects/CSARequests__c/validationRules/Presentation_Content_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Presentation_Content_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Pro_Services_Request&#39; &amp;&amp;  ISPICKVAL(CSA_Request__c,&#39;Presentation Content Assistance&#39;) &amp;&amp; (ISNULL(Due_Date__c) || ISBLANK(Details__c))</errorConditionFormula>
    <errorMessage>Due/Proposal Deadline and Details are required fields for this Request Type .</errorMessage>
</ValidationRule>