force-app/main/default/objects/CSARequests__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>