force-app/main/default/objects/CSARequests__c/listViews/Caroline_s_Requests.listView-meta.xml
<ListView>
    <fullName>Caroline_s_Requests</fullName>
    <columns>Assigned_to__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CSA_Request__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>equals</operation>
        <value>Caroline Barry</value>
    </filters>
    <label>Caroline&#39;s Requests</label>
</ListView>