force-app/main/default/objects/CSARequests__c/listViews/Chris_James_Requests.listView-meta.xml
<ListView>
    <fullName>Chris_James_Requests</fullName>
    <columns>NAME</columns>
    <columns>Assigned_to__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>James</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Chris James Requests</label>
</ListView>