force-app/main/default/objects/CSARequests__c/listViews/Conference_Presentation_CSAs.listView-meta.xml
<ListView>
    <fullName>Conference_Presentation_CSAs</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Start_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CSARequests__c.Pro_Services_Request</value>
    </filters>
    <label>Conference Presentation CSAs</label>
</ListView>