force-app/main/default/objects/CSARequests__c/listViews/Della_s_Requests.listView-meta.xml
<ListView>
    <fullName>Della_s_Requests</fullName>
    <columns>NAME</columns>
    <columns>Assigned_to__c</columns>
    <columns>CSA_Request__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>contains</operation>
        <value>Della</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Della&#39;s Requests</label>
</ListView>