force-app/main/default/objects/CSARequests__c/listViews/Jill_s_Requests.listView-meta.xml
<ListView>
    <fullName>Jill_s_Requests</fullName>
    <columns>NAME</columns>
    <columns>Assigned_to__c</columns>
    <columns>Account__c</columns>
    <columns>Details__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>contains</operation>
        <value>Jill</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Jill&#39;s Requests</label>
</ListView>