force-app/main/default/objects/CSARequests__c/listViews/Kate_s_Completed_Requests.listView-meta.xml
<ListView>
    <fullName>Kate_s_Completed_Requests</fullName>
    <columns>NAME</columns>
    <columns>CSA_Request__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>contains</operation>
        <value>Muir</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Kate&#39;s Completed Requests</label>
</ListView>