force-app/main/default/objects/CSARequests__c/listViews/Kate_s_Open_Requests.listView-meta.xml
<ListView>
    <fullName>Kate_s_Open_Requests</fullName>
    <columns>NAME</columns>
    <columns>CSA_Request__c</columns>
    <columns>Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>contains</operation>
        <value>Muir</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Kate&#39;s Open Requests</label>
</ListView>