force-app/main/default/objects/CSARequests__c/listViews/New_This_Week.listView-meta.xml
<ListView>
    <fullName>New_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Assigned_to__c</columns>
    <columns>Account__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>New This Week</label>
    <sharedTo>
        <role>TopLevel</role>
    </sharedTo>
</ListView>