force-app/main/default/objects/CSARequests__c/listViews/Pro_Services_Requests.listView-meta.xml
<ListView>
    <fullName>Pro_Services_Requests</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Status__c</columns>
    <columns>CSA_Request__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CSARequests__c.Pro_Services_Request</value>
    </filters>
    <label>Pro Services Requests</label>
    <sharedTo>
        <group>ASAProfessionalServices</group>
    </sharedTo>
</ListView>