force-app/main/default/objects/CSARequests__c/listViews/Ryan_s_Completed_Weekly_Tasks.listView-meta.xml
<ListView>
    <fullName>Ryan_s_Completed_Weekly_Tasks</fullName>
    <columns>Assigned_to__c</columns>
    <columns>NAME</columns>
    <columns>CSA_Request__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>contains</operation>
        <value>Ryan</value>
    </filters>
    <filters>
        <field>Completed_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Ryan&#39;s Completed Weekly Tasks</label>
</ListView>