force-app/main/default/objects/CSARequests__c/listViews/Ryan_s_Requests.listView-meta.xml
<ListView>
    <fullName>Ryan_s_Requests</fullName>
    <columns>CSA_Request__c</columns>
    <columns>NAME</columns>
    <columns>Details__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>contains</operation>
        <value>Ryan</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Ryan&#39;s Requests</label>
</ListView>