force-app/main/default/objects/CSARequests__c/listViews/Salesforce_Admininstrator_Requests.listView-meta.xml
<ListView>
    <fullName>Salesforce_Admininstrator_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Assigned_to__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_to__c</field>
        <operation>contains</operation>
        <value>Andrew,Jane</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CSARequests__c.CSA_Request</value>
    </filters>
    <filters>
        <field>CSA_Request__c</field>
        <operation>equals</operation>
        <value>Salesforce Admininstrator Request</value>
    </filters>
    <label>Salesforce Admininstrator Requests</label>
</ListView>